Changed FP name

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Flexoprom Project Management Suite"
+      content="FP Project Management Suite"
     />
     <title>FPMS</title>
   </head>
